refactor javascript file & refactor and comment html code

--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -4,6 +4,7 @@
 
 {% block mainbody %}
 
+    <!-- image slider -->
     <div class="m-3">
         <div class="gray-background border-shadow w-100">
             <div class="row">
@@ -22,7 +23,9 @@
             </div>
         </div>
     </div>
+    <!-- / image slider -->
 
+    <!-- apartment information -->
     <div class="m-3">
         <div class="d-flex justify-content-between">
             <div>
@@ -50,5 +53,7 @@
         </a>
         {% endif %}
     </div>
+    <!-- / apartment information -->
+
 {% endblock %}
 
