--- a/Castle/templates/apartments/zip_codes.html
+++ b/Castle/templates/apartments/zip_codes.html
@@ -1,3 +1,5 @@
+<!-- modal for choosing zip codes -->
+
 <div class="modal fade" id="chooseZIP" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -188,8 +190,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Save</button> -->
             </div>
         </div>
     </div>
 </div>
+
+<!-- / modal -->
