--- a/Castle/templates/sellers/sellers_list.html
+++ b/Castle/templates/sellers/sellers_list.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Sellers{% endblock %}
 {% block mainbody %}
-
     <div class="w-100 p-3">
-        {% for seller in sellers %}
+        {% for seller in sellers %} <!-- show all sellers -->
             {% include 'sellers/single_seller.html' with seller=seller %}
         {% endfor %}
     </div>
-
 {% endblock %}
