--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -2,9 +2,11 @@
 {% block title %}My Profile{% endblock %}
 {% block mainbody %}
 
+    <!-- user card -->
     <div class="m-3 red-background border-shadow">
         <div class="card border-shadow bg-white">
             <div class="card-body">
+                <!-- image -->
                 <div class="col-md-4 col-lg-4 col-12" id="editProfilePicture" style="float:left;text-align:center">
                     <div class="avatar-container">
                         {% if user.buyer.profile_pic %}
@@ -20,6 +22,7 @@
                         {% endif %}
                     </div>
                 </div>
+                <!-- / image -->
                 <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
                     <h3>{{ user.username }}</h3>
                     <h5>Name: <span style="font-weight:normal">{{ info.name }}</span></h5>
@@ -37,7 +40,9 @@
             </div>
         </div>
     </div>
+    <!-- / user card -->
 
+    <!-- search history -->
     <div class="w-100 p-3">
         <div class="w-100 gray-background border-shadow">
              <div class="row" style="margin:auto !important">
@@ -54,4 +59,7 @@
             </div>
         </div>
     </div>
+    <!-- / search history -->
+
 {% endblock %}
+
