--- a/Castle/templates/users/reset_password.html
+++ b/Castle/templates/users/reset_password.html
@@ -7,6 +7,7 @@
             <div class="card border-shadow">
                 <div class="card-body">
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Reset password</h5>
+                    <!-- form for resetting password -->
                     <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
@@ -14,6 +15,7 @@
                             <button type="submit" class="green-button">Reset</button>
                         </div>
                     </form>
+                    <!-- / form -->
                 </div>
             </div>
         </div>
