--- a/Castle/templates/apartments/buy_payment.html
+++ b/Castle/templates/apartments/buy_payment.html
@@ -2,6 +2,7 @@
 {% block title %}Payment information{% endblock %}
 {% block mainbody %}
 
+    <!-- process header -->
     <div class="m-3">
         <div class="w-100 gray-background border-shadow">
             <div class="card border-shadow">
@@ -17,11 +18,14 @@
             </div>
         </div>
     </div>
+    <!-- / process header -->
+
     <div class="m-3">
         <div class="w-100 red-background border-shadow mb-3">
             <div class="card border-shadow">
                 <div class="card-body">
-                 {% if form.errors %}
+                        <!-- errors -->
+                        {% if form.errors %}
                             {% for field in form %}
                                 {% for error in field.errors %}
                                     <div class="alert alert-danger">
@@ -35,7 +39,9 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
+                        <!-- / errors -->
                     <h5 class="card-title">Add your payment information</h5>
+                    <!-- form for adding payment information and going to next step in the process -->
                     <form class="form" method="POST">
                         {% csrf_token %}
                         <table class="w-75 m-3">
@@ -46,6 +52,7 @@
                         </a>
                         <button type="submit" class="btn green-button float-right">Continue</button>
                     </form>
+                    <!-- / form -->
                 </div>
             </div>
         </div>
