--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -6,15 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static  'css/style.css'%}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>{% block title %}{% endblock %}</title>
+    <!-- css imports -->
+    <link rel="stylesheet" href="{% static 'lib/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'lib/jquery.css' %}">
+    <link rel="stylesheet" href="{% static 'lib/fontawesome.css' %}">
+    <link rel="stylesheet" href="{% static 'lib/slick.css' %}">
+    <link rel="stylesheet" href="{% static  'css/style.css'%}">
+    <!-- / css imports -->
 </head>
 
 <body>
+    <!-- heeader -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-custom">
         <a class="navbar-brand" href="{% url 'homepage' %}">
             <img src="{% static 'images/logo.png' %}", alt="castle apartments">
@@ -46,11 +49,13 @@
             </ul>
         </div>
     </nav>
+    <!-- / header -->
 
     {% block mainbody %}
 
     {% endblock %}
 
+    <!-- footer -->
     <footer class="footer navbar-dark bg-custom">
         <div class="row mx-2">
             <div class="col-6">
@@ -65,13 +70,15 @@
             </div>
         </div>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <script src="{% static  'scripts/app.js'%}"></script>
+    <!-- /footer -->
+
+    <!-- javascript imports -->
+    <script src="{% static 'lib/jquery.js' %}"></script>
+    <script src="{% static 'lib/bootstrap.js' %}"></script>
+    <script src="{% static 'lib/jquery_ui.js' %}"></script>
+    <script src="{% static 'lib/slick.js' %}"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="{% static  'scripts/app.js'%}"></script>
+    <!-- / javascript imports -->
 </body>
 </html>
