--- a/Castle/templates/sellers/single_seller.html
+++ b/Castle/templates/sellers/single_seller.html
@@ -1,3 +1,5 @@
+<!-- single seller -->
+
 <div class="w-100 gray-background border-shadow" style="margin:0rem 0rem 1rem 0rem">
     <div class="card white-background border-shadow">
         <div class="card-body row p-0">
@@ -5,7 +7,7 @@
                 {% if seller.logo %}
                     <img src="{{ seller.logo }}" class="img-thumbnail simple-border" style="width:100%" alt="seller logo">
                 {% else %}
-                    <img src="/static/images/userimagenotfound.jpg" class="img-thumbnail simple-border" style="width:100%" alt="seller logo">
+                    <img src="{% static 'images/userimagenotfound.jpg' %}" class="img-thumbnail simple-border" style="width:100%" alt="seller logo">
                 {% endif %}
             </div>
             <div class="col-4">
@@ -24,3 +26,5 @@
         </div>
     </div>
 </div>
+
+<!-- / single seller -->
