--- a/Castle/templates/users/login.html
+++ b/Castle/templates/users/login.html
@@ -6,6 +6,7 @@
             <div class="card border-shadow">
                 <div class="card-body">
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Login</h5>
+                    <!-- form for login -->
                     <form class="form" method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
@@ -14,7 +15,8 @@
                             <button type="submit" class="green-button">Login</button>
                         </div>
 
-                          {% if form.errors %}
+                        <!-- errors -->
+                        {% if form.errors %}
                             {% for field in form %}
                                 {% for error in field.errors %}
                                     <div class="alert alert-danger">
@@ -28,7 +30,9 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
+                        <!-- / errors -->
                     </form>
+                    <!-- / form -->
                 </div>
             </div>
         </div>
