--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -6,21 +6,25 @@
             <div class="card border-shadow">
                 <div class="card-body">
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Register new user</h5>
+                    <!-- form for registration -->
                     <form class="form" method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
+                        <!-- Google Captcha -->
                         <script src='https://www.google.com/recaptcha/api.js'></script>
                         <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
                         <button type="submit" class="green-button">Register</button>
 
-                        {% if messages %} {# For Google Captcha #}
+                        <!-- errors -->
+                        {% if messages %}
                             {% for message in messages %}
                                 <div class="alert alert-danger">
                                     {{ message|safe }}
                                 </div>
                             {% endfor %}
                         {% endif %}
+                        <!-- / Google Captcha -->
 
                         {% if form.errors %}
                             {% for field in form %}
@@ -36,7 +40,9 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
-                    </form> <!-- /form -->
+                        <!-- / errors -->
+                    </form>
+                    <!-- / form -->
                 </div>
             </div>
         </div>
