--- a/Castle/templates/users/reset_password_confirm.html
+++ b/Castle/templates/users/reset_password_confirm.html
@@ -8,15 +8,18 @@
                 <div class="card-body">
                     {% if validlink %}
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Change password</h5>
-                    <form method="POST" class="change_password">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                          <div style="margin-top:0.4rem">
-                            <button type="submit" class="green-button">Change</button>
-                        </div>
-                    </form>
+                        <!-- form for changing password when doing a password reset-->
+                        <form method="POST" class="change_password">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                              <div style="margin-top:0.4rem">
+                                <button type="submit" class="green-button">Change</button>
+                            </div>
+                        </form>
+                        <!-- / form -->
 
-                         {% if form.errors %}
+                        <!-- errors -->
+                        {% if form.errors %}
                             {% for field in form %}
                                 {% for error in field.errors %}
                                     <div class="alert alert-danger">
@@ -30,6 +33,7 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
+                        <!-- / errors -->
                     {% else %}
                         <p>
                           The password reset link was invalid, possibly because it has already been used.
