--- a/Castle/templates/users/seller_profile.html
+++ b/Castle/templates/users/seller_profile.html
@@ -2,9 +2,11 @@
 {% load pipes %}
 {% block title %}My Profile{% endblock %}
 {% block mainbody %}
+     <!-- user card -->
      <div class="m-3 red-background border-shadow">
         <div class="card border-shadow bg-white">
             <div class="card-body">
+                <!-- image -->
                 <div class="col-md-4 col-lg-4 col-12" id="editProfilePicture" style="float:left;text-align:center">
                     <div class="avatar-container">
                         {% if user.seller.logo%}
@@ -20,6 +22,7 @@
                         {% endif %}
                     </div>
                 </div>
+                <!-- / image -->
                 <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
                     <h3>{{ user.username }}</h3>
                     <h5>Name: <span style="font-weight:normal">{{ info.name }}</span></h5>
@@ -49,12 +52,9 @@
             </div>
         </div>
     </div>
+    <!-- / user card -->
 
-{#    <div class="row w-100 p-3">#}
-{#        <div class="col-6"><button id="sale_stats" type="submit" class="btn green-button w-100">See sales statistics</button></div>#}
-{##}
-{#    </div>#}
-
+    <!-- statistics -->
     <div class="m-3 simple-border">
         <div class="row mx-3 py-3">
             <div class="col-8">
@@ -68,7 +68,9 @@
             </div>
         </div>
     </div>
+    <!-- / statistics -->
 
+     <!-- apartments for sale -->
      <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
             <div class="row" style="margin:auto !important">
@@ -85,7 +87,9 @@
             </div>
         </div>
     </div>
+    <!-- / apartments for sale -->
 
+    <!-- apartments sold -->
      <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
             <div class="row" style="margin:auto !important">
@@ -102,5 +106,6 @@
             </div>
         </div>
     </div>
+    <!-- / apartments sold -->
 
 {% endblock %}
