--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -9,9 +9,10 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- css imports -->
     <link rel="stylesheet" href="{% static 'lib/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'lib/jquery.css' %}">
-    <link rel="stylesheet" href="{% static 'lib/fontawesome.css' %}">
-    <link rel="stylesheet" href="{% static 'lib/slick.css' %}">
+    <link rel="stylesheet" href="{% static  'lib/jquery.css'%}">
+    <link rel="stylesheet" href="{% static  'lib/slick.css'%}">
+    <!-- fontawesome has to be via the CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static  'css/style.css'%}">
     <!-- / css imports -->
 </head>
