some small styling changes

--- a/Castle/templates/users/change_password.html
+++ b/Castle/templates/users/change_password.html
@@ -10,9 +10,9 @@
                     <!-- form for changing password -->
                     <form method="POST" class="change_password">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <table>{{ form }}</table>
                           <div style="margin-top:0.4rem">
-                            <button type="submit" class="green-button">Update</button>
+                            <button type="submit" class="btn green-button">Update</button>
                         </div>
                     </form>
                     <!-- / form -->
