--- a/Castle/templates/users/edit_user.html
+++ b/Castle/templates/users/edit_user.html
@@ -15,7 +15,7 @@
                             {{ form2.as_p }}
                         {% endif %}
                           <div style="margin-top:0.4rem">
-                            <button type="submit" class="green-button">Update</button>
+                            <button type="submit" class="btn green-button">Update</button>
                         </div>
                     </form>
                     <!-- / form -->
