--- a/Castle/templates/users/login.html
+++ b/Castle/templates/users/login.html
@@ -12,7 +12,7 @@
                         {{ form.as_p }}
                         <a href="/users/password_reset">Forgot password?</a>
                         <div style="margin-top:0.4rem">
-                            <button type="submit" class="green-button">Login</button>
+                            <button type="submit" class="btn green-button">Login</button>
                         </div>
 
                         <!-- errors -->
