--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -9,12 +9,12 @@
                     <!-- form for registration -->
                     <form class="form" method="POST">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <table>{{ form }}</table>
                         <!-- Google Captcha -->
                         <script src='https://www.google.com/recaptcha/api.js'></script>
                         <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
-                        <button type="submit" class="green-button">Register</button>
+                        <button type="submit" class="btn green-button">Register</button>
 
                         <!-- errors -->
                         {% if messages %}
