--- a/Castle/templates/users/reset_password_confirm.html
+++ b/Castle/templates/users/reset_password_confirm.html
@@ -13,7 +13,7 @@
                             {% csrf_token %}
                             {{ form.as_p }}
                               <div style="margin-top:0.4rem">
-                                <button type="submit" class="green-button">Change</button>
+                                <button type="submit" class="btn green-button">Change</button>
                             </div>
                         </form>
                         <!-- / form -->
